gcc/testsuite/rust/rustc/ui/issues/issue-11844.rs
#![feature(box_syntax)]

fn main() {
    let a = Some(box 1);
    match a {
        Ok(a) => // { dg-error ".E0308." "" { target *-*-* } }
            println!("{}",a),
        None => panic!()
    }
}

